@startuml

class User {
    -name: string
    -favMarkets: List<Market>
    -location: Location
    -favItems: List<Product>
}

class Product {
    -productID: string
    -name: string
    -quantity: int
    -price: double
    -discount: double
    -expirationDate: Date
    -available: bool
    -favorite: bool
    +isAvailable(): bool
}

class Category {
    -code: string
}

enum Categories {
    Vegetables
    Fruits
    Fats
    Dairy
    MeatFishEggs
    Carbs
    Drinks
}

class Location {
    -latitude: int
    -longitude: int
}

class Market {
    -marketID: string
    -name: string
    -location: Location
    -favorite: bool
    -image: string
}

class MarketChain {
    -marketChainID: string
    -name: string
}

User "1" --> "*" Product: favorite >
User "1" -> "1" Location: has >
User "*" --> "*" Market: favorite >
Location "1" --> "1" Market: has <
Market "1" --> "*" Product: has >
Product "1" --> "1" Category: has >
Market --|> MarketChain: belongs to
Category -> Categories

' ...>
' ..|> : implements

@enduml
